test/cpls/errors/assign-non-existent-var.cpls
{
  "type": "CALL",
  "operator": {
    "type": "WORD",
    "name": "assign",
    "offset": 0,
    "line": 1,
    "column": 1
  },
  "args": [
    {
      "type": "WORD",
      "name": "x",
      "offset": 7,
      "line": 1,
      "column": 8
    },
    {
      "type": "VALUE",
      "value": 15,
      "offset": 10,
      "line": 1,
      "column": 10
    }
  ]
}